# mission9-2022

./: .config  .gitignore  Dockerfile  Dockerfile_Long  Dockerfile_base  README.md  air.py  commands.sh  docker-compose.yml  filter.py  mac.Dockerfile  mast.world  split.py  test.txt  thing.world  way_point_generation.py  waypoints.world
.ipynb_checkpoints/: filter-checkpoint.ipynb
computer_vision/: filter.ipynb
computer_vision/.ipynb_checkpoints/: filter-checkpoint.ipynb
cv/c++Version/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  c++LineDetection  c++LineDetection.cpp  cmake_install.cmake  l083  log.txt
cv/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
cv/jupyterNoteBooks/: attemptAtCornerDetectionFollowingSwesik.ipynb  (+2 more)
docs/: CustomWorld.md  Docker.md  Intel-NUC-Setup  Linux.md  Mac.md  Onboarding.md  SimCamera.md  VBox.md  WSL.md  mast.md
mast/: base_link.STL  mast.dae  mast_colored.dae  mast_colored2.dae  mast_urdf.urdf  model.config  model.sdf
scripts/: gazebo_ros_wrap.sh  install_everything.sh  install_everything_user.sh  probe_drivers.sh  px4.launch  run_sim.sh  setup-PX4.sh  setup-gazebo.sh  setup-px4.sh  setup-ros.sh  setup-sim.sh  source-ros.sh  start_gazebo.bash
sim/: sim.sh
software_ws/: .out.txt.swp  .simple_waypoint_following.cpp.swp  out.txt  test.py  way_points.txt
software_ws/src/dmolony_onboarding/: CMakeLists.txt  package.xml  takeoff_n_land.cpp  takeoff_n_landOnBoard.cpp
worlds/: plannar_mover.cpp  simple_mast.world
(+172 files in other folders)
