<?xml version="1.0"?>
<package format="2">
  <name>dmolony_onboarding</name>
  <version>0.0.0</version>
  <description>The dmolony_onboarding package</description>

  <maintainer email="dmolony@umich.edu">root</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <exec_depend>mavros</exec_depend>


  <export>

  </export>
</package>
